--- a/charts/ebpf-server/templates/service.yaml
+++ b/charts/ebpf-server/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: http
+      name: grpc
   selector:
     {{- include "ebpf-server.selectorLabels" . | nindent 4 }}
