--- a/charts/ebpf-server/charts/clickhouse/Chart.yaml
+++ b/charts/ebpf-server/charts/clickhouse/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: ebpf-deploy
-description: A Helm chart to deploy a eBPF monitoring stack (controller,server,db)
+name: clickhouse
+description: A Helm chart for ClickHouse statefullset on Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -21,9 +21,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
-
-dependencies:
-- name: ebpf-server
-  version: "0.1.0"
-  repository: "file://charts/ebpf-server/"
+appVersion: "25.4.2.31"
