--- a/charts/ebpf-server/values.yaml
+++ b/charts/ebpf-server/values.yaml
@@ -105,7 +105,7 @@ clickhouse:
     my_init_script.sh: |
       #!/bin/bash
       echo "Initializing ClickHouse database as admin..."
-      clickhouse-client --user=admin --password=${CLICKHOUSE_ADMIN_PASSWORD} --query "
+      clickhouse-client --user=admin --password=${CLICKHOUSE_ADMIN_PASSWORD} --multiquery "
         CREATE DATABASE IF NOT EXISTS audit;
 
         CREATE TABLE IF NOT EXISTS audit.tracing_events (
@@ -280,6 +280,56 @@ clickhouse:
         container_labels_json JSON
       ) ENGINE = MergeTree()
       ORDER BY wall_time_ms;
+
+      CREATE TABLE IF NOT EXISTS audit.resource_events (
+        pid UInt32,
+        comm String,
+        uid UInt32,
+        gid UInt32,
+        ppid UInt32,
+        user_pid UInt32,
+        user_ppid UInt32,
+        cgroup_id UInt64,
+        cgroup_name String,
+        user String,
+        cpu_ns Float64,
+        user_faults UInt64,
+        kernel_faults UInt64,
+        vm_mmap_bytes Float64,
+        vm_munmap_bytes Float64,
+        vm_brk_grow_bytes Float64,
+        vm_brk_shrink_bytes Float64,
+        bytes_written Float64,
+        bytes_read Float64,
+        isActive UInt32,
+        wall_time_dt DateTime64(3),
+        wall_time_ms Int64,
+        container_id String,
+        container_image String,
+        container_labels_json JSON
+      ) ENGINE = MergeTree()
+      ORDER BY wall_time_ms;
+
+      CREATE TABLE IF NOT EXISTS audit.syscall_freq_events (
+        pid UInt32,
+        comm String,
+        uid UInt32,
+        gid UInt32,
+        ppid UInt32,
+        user_pid UInt32,
+        user_ppid UInt32,
+        cgroup_id UInt64,
+        cgroup_name String,
+        user String,
+        syscall_vector_json JSON,
+        wall_time_dt DateTime64(3),
+        wall_time_ms Int64,
+        container_id String,
+        container_image String,
+        container_labels_json JSON
+      ) ENGINE = MergeTree()
+      ORDER BY wall_time_ms;
+
       "
   auth: 
     username: admin
